# dyslexia-screening

./: .gitignore  DysTest_System_Logic_and_Pseudocode.docx  README.md  generate_report_docx.py
ml-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ml-service/api/: index.py
ml-service/app/: __init__.py  api.py  config.py
ml-service/app/core/: lifespan.py
ml-service/app/routers/: __init__.py
ml-service/app/schemas/: __init__.py  utils.py
ml-service/app/services/: __init__.py
ml-service/dystest_gamified_ml_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml-service/tests/: __init__.py  test_endpoints.py
ml-work/notebooks/: lexora_v3_colab.py  lexora_v3_corrected.py
web/: .env.example  README.md
web/src/app/: globals.css  layout.tsx
web/src/app/(marketing)/: layout.tsx  page.tsx
web/src/app/(marketing)/instructions/: page.tsx
web/src/app/gamified-test/: page.tsx
web/src/app/gamified-test/result/[sessionId]/: page.tsx
web/src/app/gamified-test/result/[sessionId]/details/: page.tsx
web/src/app/gamified-test/result/[sessionId]/report/: page.tsx
web/src/app/gamified-test/test/[sessionId]/: page.tsx
web/src/components/shared/: lexora-logo.tsx
web/src/features/gamified-test/lib/: questions.ts  session-store.ts  types.ts
