[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dystest-gamified-ml-service"
version = "2.0.0"
description = "ML service for dyslexia risk prediction from gamified cognitive test interactions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "scikit-learn==1.6.1",
    "numpy==2.0.2",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pandas==2.2.2",
    "joblib==1.4.2",
    "imbalanced-learn==0.14.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.0",
    "ruff==0.14.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.dystest]
app_name = "DysTest Gamified ML Service"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
